# hack-peak-circuits

./: .gitignore  LICENSE  README.md  hack-peak-circuits-tno-cpu.ipynb  hack-peak-circuits-tno.ipynb  hack-peak-circuits.ipynb  peaked-circuit-distillation.ipynb  peaked-circuit-tno.ipynb  peaked-circuit-unswapping.ipynb  pyproject.toml  requirements.txt  utils.py
